# ML_ITMO

./: .gitignore  CMakeLists.txt
KNN/: ConfusionMatrix.cpp  KNN.ipynb  main.cpp
codeforces/: A.cpp
